# evc

./: README.md  pyproject.toml  test.py
src/evaluation/: __init__.py
src/evc/: __init__.py  __main__.py  sampling.py
src/model/: __init__.py
src/sampling/: __init__.py
tests/: keras_test.py  plot_keras.py  test.py
utils/: meta.mk
